--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
+<header class="navigation py-3 ">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">Bootstrap</a>
@@ -18,14 +18,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item ">
+              <li class="nav-item mx-3 ">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-3">
                 <a class="nav-link" href="#">Download</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link btn rounded-pill btn-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <li class="nav-item mx-3 ">
+                <a class="nav-link btn rounded-pill background-gradient text-white px-3" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
                   </svg>Send Feedback</a>
               </li>
@@ -37,7 +37,7 @@
         <section class="container">
             <div class="row">
                 <div class="col-md-6">
-                   <div>
+                   <div class="py-3">
                        <h1 class="display-2 fw-bold">Showcase your app beautifully</h1>
                        <p class="fs-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cupiditate est maxime assumenda, magni veritatis illo tempora ipsum sunt quos.</p>
                        <div>
@@ -51,7 +51,9 @@
                    </div>
                 </div>
                 <div class="col-md-6">
-                   <img src="img/banner.png" alt="">
+                   <div class="d-flex justify-content-center align-items-center py-3">
+                    <img src="img/banner.png" alt="">
+                   </div>
                    
                 </div>
             </div>
