--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img height="50" src="img/tnw-logo.svg" alt="">
           </div>
         </section>
-        <!-- ---------------------featre work ---------------->
+        <!-- ---------------------feature work ---------------->
         <section id="feature">
           <div class="container ">
             <div class="row">
@@ -122,6 +122,25 @@
                 </div>
 
 
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--------------- feature End------------- -->
+        <!-- ---------section web design started ------------>
+        <section class="new-web-design my-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                 <div class="pe-3 d-flex flex-column justify-content-center h-100">
+                  <h1 class="text-blue display-4 fw-bold">Enter a new age of web design</h1>
+                  <p class="fs-5 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, numquam! Est provident, ad repellendus quasi fugit vel cumque aliquam expedita!</p>
+                 </div>
+              </div>
+              <div class="col-md-6">
+                <div class="p-5"> 
+                  <img class="rounded-circle" src="img/web-design.png" alt="">
+                </div>
               </div>
             </div>
           </div>
