--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="navigation">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
+<header class="navigation sticky-top">
+    <nav class="navbar   navbar-expand-lg navbar-light bg-light  ">
         <div class="container">
           <a class="navbar-brand" href="#">Bootstrap</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -145,6 +145,30 @@
             </div>
           </div>
         </section>
+        <!-- stop writing -->
+        <section class="stop-waiting">
+          <div class="container d-flex flex-column justify-content-center  h-100 align-items-start">
+            <h1 class="display-2 text-white w-50">Stop waiting. Start building</h1>
+          <a href="" class="btn btn-outline-light rounded-pill">Download for free</a>
+          </div>
+
+        </section>
+        <!-- download section -->
+        <section id="download" class="background-gradient py-5">
+         <div class="text-center py-5 d-flex flex-column justify-content-center align-items-center">
+           <h1 class="text-white">Get the app now!</h1>
+           <div>
+             <a href="">
+               <img src="./img/app-store.png" alt="">
+              </a>
+             <a href="">
+               <img src="./img/google-play.png" alt="">
+              </a>
+           </div>
+         </div>
+       
+        </section>
+
      </main>
 
     
