--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
          </div>
        
         </section>
+        <!-- footer start -->
+        <footer class="bg-dark py-4">
+          <div class="text-center">
+            <small class="text-white">&copy; Your webiste 2022, All rights reserved</small>
+          </div>
+        </footer>
 
      </main>
 
